--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,1 +1,54 @@
-$color_primary:#000000;
+$browser-prefixes: false !default;
+:root {
+  --color_primary: #9E5D49;
+  --color_secondary: #321A18;
+  --color_white: #ffffff;
+  --color_black: #000000;
+
+  // Extras
+  --container_width: 100%;
+  --container_left_space: calc((100% - var(--container_width)) / 2);
+  --transition: ease all 300ms;
+
+  @media (min-width: 768px) and (max-width: 991px) {
+    --container_width: 750px;
+  }
+
+  @media (min-width: 992px) and (max-width: 1199px) {
+    --container_width: 970px;
+  }
+
+  @media (min-width: 1200px) {
+    --container_width: 1170px;
+  }
+}
+
+// Color Classes //
+.color_primary {
+  color: var(--color_primary);
+}
+.color_secondary {
+  color: var(--color_secondary);
+}
+.color_white {
+  color: var(--color_white);
+}
+.color_black {
+  color: var(--color_black);
+}
+
+// Background Colors //
+.bg_primary {
+  background-color: var(--color_primary);
+}
+.bg_secondary {
+  background-color: var(--color_secondary);
+}
+
+.bg_white {
+  background-color: var(--color_white);
+}
+.bg_black {
+  background-color: var(--color_black);
+}
+
