--- a/css/base.css
+++ b/css/base.css
@@ -1,3 +1,443 @@
+:root {
+  --color_primary: #9E5D49;
+  --color_secondary: #321A18;
+  --color_white: #ffffff;
+  --color_black: #000000;
+  --container_width: 100%;
+  --container_left_space: calc((100% - var(--container_width)) / 2);
+  --transition: ease all 300ms; }
+  @media (min-width: 768px) and (max-width: 991px) {
+    :root {
+      --container_width: 750px; } }
+  @media (min-width: 992px) and (max-width: 1199px) {
+    :root {
+      --container_width: 970px; } }
+  @media (min-width: 1200px) {
+    :root {
+      --container_width: 1170px; } }
+
+.color_primary {
+  color: var(--color_primary); }
+
+.color_secondary {
+  color: var(--color_secondary); }
+
+.color_white {
+  color: var(--color_white); }
+
+.color_black {
+  color: var(--color_black); }
+
+.bg_primary {
+  background-color: var(--color_primary); }
+
+.bg_secondary {
+  background-color: var(--color_secondary); }
+
+.bg_white {
+  background-color: var(--color_white); }
+
+.bg_black {
+  background-color: var(--color_black); }
+
+.m_tb_0 {
+  margin: 0; }
+
+.m_b_5 {
+  margin: 0 0 5px; }
+
+.m_t_5 {
+  margin: 5px 0 0; }
+
+.m_tb_5 {
+  margin: 5px 0; }
+
+.m_b_10 {
+  margin: 0 0 10px; }
+
+.m_t_10 {
+  margin: 10px 0 0; }
+
+.m_tb_10 {
+  margin: 10px 0; }
+
+.m_b_15 {
+  margin: 0 0 15px; }
+
+.m_t_15 {
+  margin: 15px 0 0; }
+
+.m_tb_15 {
+  margin: 15px 0; }
+
+.m_b_20 {
+  margin: 0 0 20px; }
+
+.m_t_20 {
+  margin: 20px 0 0; }
+
+.m_tb_20 {
+  margin: 20px 0; }
+
+.m_b_30 {
+  margin: 0 0 30px; }
+
+.m_t_30 {
+  margin: 30px 0 0; }
+
+.m_tb_30 {
+  margin: 30px 0; }
+
+.m_b_80 {
+  margin: 0 0 80px; }
+  @media only screen and (max-width: 767px) {
+    .m_b_80 {
+      margin: 0 0 60px; } }
+
+.m_t_80 {
+  margin: 80px 0 0; }
+  @media only screen and (max-width: 767px) {
+    .m_t_80 {
+      margin: 60px 0 0; } }
+
+.m_tb_80 {
+  margin: 80px 0; }
+  @media only screen and (max-width: 767px) {
+    .m_tb_80 {
+      margin: 60px 0; } }
+
+.m_b_100 {
+  margin: 0 0 100px; }
+  @media only screen and (max-width: 767px) {
+    .m_b_100 {
+      margin: 0 0 80px; } }
+
+.m_t_100 {
+  margin: 100px 0 0; }
+  @media only screen and (max-width: 767px) {
+    .m_t_100 {
+      margin: 80px 0 0; } }
+
+.m_tb_100 {
+  margin: 100px 0; }
+  @media only screen and (max-width: 767px) {
+    .m_tb_100 {
+      margin: 80px 0; } }
+
+.p_t {
+  padding-top: 20px; }
+
+.pt_10 {
+  padding-top: 10px; }
+
+.pb_10 {
+  padding-bottom: 10px; }
+
+.ptb_10 {
+  padding: 10px 0; }
+
+.pt_20 {
+  padding-top: 20px; }
+
+.pb_20 {
+  padding-bottom: 20px; }
+
+.ptb_20 {
+  padding: 20px 0; }
+
+.pt_30 {
+  padding-top: 30px; }
+
+.pb_30 {
+  padding-bottom: 30px; }
+
+.ptb_30 {
+  padding: 30px 0; }
+
+.pt_40 {
+  padding-top: 40px; }
+
+.pb_40 {
+  padding-bottom: 40px; }
+
+.ptb_40 {
+  padding: 40px 0; }
+
+.pt_50 {
+  padding-top: 50px; }
+
+.pb_50 {
+  padding-bottom: 50px; }
+
+.ptb_50 {
+  padding: 50px 0; }
+
+.ptb_60 {
+  padding: 60px 0; }
+
+@media only screen and (max-width: 767px) {
+  .ptb_60 {
+    padding: 40px 0; } }
+.pt_60 {
+  padding-top: 60px; }
+
+@media only screen and (max-width: 767px) {
+  .pt_60 {
+    padding-top: 40px; } }
+.pb_60 {
+  padding-bottom: 60px; }
+
+@media only screen and (max-width: 767px) {
+  .pb_60 {
+    padding-bottom: 40px; } }
+.ptb_80 {
+  padding: 80px 0; }
+
+@media only screen and (max-width: 767px) {
+  .ptb_80 {
+    padding: 60px 0; } }
+.pt_80 {
+  padding-top: 80px; }
+
+@media only screen and (max-width: 767px) {
+  .pt_80 {
+    padding-top: 60px; } }
+.pb_80 {
+  padding-bottom: 80px; }
+
+@media only screen and (max-width: 767px) {
+  .pb_80 {
+    padding-bottom: 60px; } }
+.ptb_100 {
+  padding: 100px 0; }
+
+@media only screen and (max-width: 991px) {
+  .ptb_100 {
+    padding: 60px 0; } }
+.pt_100 {
+  padding-top: 100px; }
+
+@media only screen and (max-width: 991px) {
+  .pt_100 {
+    padding-top: 60px; } }
+.pb_100 {
+  padding-bottom: 100px; }
+
+@media only screen and (max-width: 991px) {
+  .pb_100 {
+    padding-bottom: 60px; } }
+.text_100 {
+  font-size: 100px; }
+  @media only screen and (max-width: 991px) {
+    .text_100 {
+      font-size: 40px; } }
+
+.text_xxxxl {
+  font-size: 54px; }
+  @media only screen and (max-width: 991px) {
+    .text_xxxxl {
+      font-size: 40px; } }
+
+.text_xxxl {
+  font-size: 50px; }
+  @media only screen and (max-width: 991px) {
+    .text_xxxl {
+      font-size: 40px; } }
+  @media only screen and (max-width: 767px) {
+    .text_xxxl {
+      font-size: 30px; } }
+
+.text_xxl {
+  font-size: 45px; }
+  @media only screen and (max-width: 991px) {
+    .text_xxl {
+      font-size: 40px; } }
+  @media only screen and (max-width: 767px) {
+    .text_xxl {
+      font-size: 30px; } }
+
+.text_xl {
+  font-size: 36px; }
+  @media only screen and (max-width: 991px) {
+    .text_xl {
+      font-size: 30px; } }
+  @media only screen and (max-width: 767px) {
+    .text_xl {
+      font-size: 24px; } }
+
+.text_xsl {
+  font-size: 30px; }
+  @media only screen and (max-width: 767px) {
+    .text_xsl {
+      font-size: 20px; } }
+
+.text_lg {
+  font-size: 22px; }
+
+.text_md {
+  font-size: 20px; }
+  @media only screen and (max-width: 767px) {
+    .text_md {
+      font-size: 18px; } }
+
+.text_reg {
+  font-size: 18px; }
+
+.text_sm {
+  font-size: 16px; }
+
+.text_xxs {
+  font-size: 14px; }
+
+.text_xs {
+  font-size: 12px; }
+
+.text_700 {
+  font-weight: 700; }
+
+.text_600 {
+  font-weight: 600; }
+
+.text_500 {
+  font-weight: 500; }
+
+.text_400 {
+  font-weight: 400; }
+
+.text_300 {
+  font-weight: 300; }
+
+.text_200 {
+  font-weight: 200; }
+
+.text_100 {
+  font-weight: 100; }
+
+.lh_1 {
+  line-height: 1; }
+
+.lh_1_1 {
+  line-height: 1.1; }
+
+.lh_1_2 {
+  line-height: 1.2; }
+
+.lh_1_3 {
+  line-height: 1.3; }
+
+.lh_1_4 {
+  line-height: 1.4; }
+
+.lh_1_5 {
+  line-height: 1.5; }
+
+.lh_1_6 {
+  line-height: 1.6; }
+
+/* cyrillic */
+@font-face {
+  font-family: 'Playfair Display';
+  font-style: italic;
+  font-weight: 400 900;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/playfairdisplay/v37/nuFkD-vYSZviVYUb_rj3ij__anPXDTnohkk72xU.woff2) format("woff2");
+  unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116; }
+/* vietnamese */
+@font-face {
+  font-family: 'Playfair Display';
+  font-style: italic;
+  font-weight: 400 900;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/playfairdisplay/v37/nuFkD-vYSZviVYUb_rj3ij__anPXDTnojUk72xU.woff2) format("woff2");
+  unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329, U+1EA0-1EF9, U+20AB; }
+/* latin-ext */
+@font-face {
+  font-family: 'Playfair Display';
+  font-style: italic;
+  font-weight: 400 900;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/playfairdisplay/v37/nuFkD-vYSZviVYUb_rj3ij__anPXDTnojEk72xU.woff2) format("woff2");
+  unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF; }
+/* latin */
+@font-face {
+  font-family: 'Playfair Display';
+  font-style: italic;
+  font-weight: 400 900;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/playfairdisplay/v37/nuFkD-vYSZviVYUb_rj3ij__anPXDTnogkk7.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD; }
+/* cyrillic */
+@font-face {
+  font-family: 'Playfair Display';
+  font-style: normal;
+  font-weight: 400 900;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/playfairdisplay/v37/nuFiD-vYSZviVYUb_rj3ij__anPXDTjYgFE_.woff2) format("woff2");
+  unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116; }
+/* vietnamese */
+@font-face {
+  font-family: 'Playfair Display';
+  font-style: normal;
+  font-weight: 400 900;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/playfairdisplay/v37/nuFiD-vYSZviVYUb_rj3ij__anPXDTPYgFE_.woff2) format("woff2");
+  unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329, U+1EA0-1EF9, U+20AB; }
+/* latin-ext */
+@font-face {
+  font-family: 'Playfair Display';
+  font-style: normal;
+  font-weight: 400 900;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/playfairdisplay/v37/nuFiD-vYSZviVYUb_rj3ij__anPXDTLYgFE_.woff2) format("woff2");
+  unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20C0, U+2113, U+2C60-2C7F, U+A720-A7FF; }
+/* latin */
+@font-face {
+  font-family: 'Playfair Display';
+  font-style: normal;
+  font-weight: 400 900;
+  font-display: swap;
+  src: url(https://fonts.gstatic.com/s/playfairdisplay/v37/nuFiD-vYSZviVYUb_rj3ij__anPXDTzYgA.woff2) format("woff2");
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD; }
+@font-face {
+  font-family: "PlayfairDisplay-SemiBold";
+  src: url("../fonts/PlayfairDisplay-SemiBold.ttf");
+  src: url("../fonts/PlayfairDisplay-SemiBold.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal; }
+@font-face {
+  font-family: "HELVETICANEUE-LIGHT";
+  src: url("../fonts/HELVETICANEUE-LIGHT.OTF");
+  src: url("../fonts/HELVETICANEUE-LIGHT.OTF") format("truetype");
+  font-weight: normal;
+  font-style: normal; }
+.btn_bg_arrow {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 16px;
+  color: var(--color_white);
+  font-weight: 400;
+  text-decoration: none;
+  border: 1px solid var(--color_primary);
+  padding: 10px 25px;
+  background-color: var(--color_primary);
+  text-align: center;
+  border-radius: 6px;
+  transition: 0.5s ease-in-out;
+  font-family: "HELVETICANEUE-LIGHT"; }
+  .btn_bg_arrow:hover {
+    border: 1px solid var(--color_primary);
+    color: var(--color_primary);
+    background-color: var(--color_white);
+    transition: 0.5s ease-in-out; }
+    .btn_bg_arrow:hover img {
+      filter: invert(1);
+      transition: 0.5s ease-in-out; }
+  .btn_bg_arrow img {
+    margin-top: 3px;
+    margin-right: 5px;
+    transition: 0.5s ease-in-out; }
+
 body {
   margin: 0; }
 
@@ -30,5 +470,145 @@ section {
   display: block;
   max-width: 100%;
   height: auto; }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul {
+  margin: 0;
+  font-weight: normal; }
+
+.font_pd {
+  font-family: 'Playfair Display'; }
+
+.font_hl {
+  font-family: "HELVETICANEUE-LIGHT"; }
+
+.text_center {
+  text-align: center; }
+
+.text_uppercase {
+  text-transform: uppercase; }
+
+.d_f {
+  display: flex; }
+
+.f_w {
+  display: flex;
+  flex-wrap: wrap; }
+
+.f_w_j {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between; }
+
+.f_w_a_j_center {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center; }
+
+.f_j {
+  display: flex;
+  justify-content: space-between; }
+
+.f_w_se {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly; }
+
+.f_w_a {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center; }
+
+.f_r_aj_between {
+  display: flex;
+  align-items: center;
+  justify-content: space-between; }
+
+.f_r_aj_center {
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+
+.f_r_a_center {
+  display: flex;
+  align-items: center; }
+
+.a_center {
+  align-items: center; }
+
+.f_r_j_center {
+  display: flex;
+  justify-content: center; }
+
+.f_c_aj_center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; }
+
+.f_c_a_center {
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+
+.f_c_j_center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center; }
+
+.l_h_1 {
+  line-height: 1.1; }
+
+.l_h_2 {
+  line-height: 1.2; }
+
+.l_h_3 {
+  line-height: 1.3; }
+
+.l_h_4 {
+  line-height: 1.4; }
+
+.l_h_5 {
+  line-height: 1.5; }
+
+.l_h_6 {
+  line-height: 1.6; }
+
+.l_h_7 {
+  line-height: 1.7; }
+
+.l_h_8 {
+  line-height: 1.8; }
+
+.f_w_exl {
+  font-weight: 200; }
+
+.f_w_l {
+  font-weight: 300; }
+
+.f_w_r {
+  font-weight: 400; }
+
+.f_w_m {
+  font-weight: 500; }
+
+.f_w_s_b {
+  font-weight: 600; }
+
+.f_w_b {
+  font-weight: 700; }
+
+.f_w_i {
+  font-style: italic; }
+
+.f_w_i_none {
+  font-style: inherit; }
 
 /*# sourceMappingURL=base.css.map */
