--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,6 +1,20 @@
 @import "variables"; //import this on each scss page you create
 
 #index_page {
-    min-height: 100vh;
-    background-color: $color_primary;
+  height: 100vh;
+  background-color: #FFF9F8; 
+  position: relative;
+  .patch_img{
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    img{
+      @media only screen and (max-width: 1199px) {
+        width: 600px;
+      }
+      @media only screen and (max-width: 767px) {
+        width: 400px;
+      }
+    } 
+  }
 }
