--- a/css/base.css
+++ b/css/base.css
@@ -230,6 +230,9 @@
   font-size: 100px; }
   @media only screen and (max-width: 991px) {
     .text_100 {
+      font-size: 60px; } }
+  @media only screen and (max-width: 767px) {
+    .text_100 {
       font-size: 40px; } }
 
 .text_xxxxl {
