--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -2,6 +2,9 @@
 .text_100 {
   font-size: 100px;
   @media only screen and (max-width: 991px) {
+    font-size: 60px;
+  }
+  @media only screen and (max-width: 767px) {
     font-size: 40px;
   }
 }
