--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,16 +1,25 @@
 @import "variables"; //import this on each scss page you create
 
 #index_page {
-  height: 100vh;
+  min-height: 100vh;
   background-color: #FFF9F8; 
   position: relative;
+  overflow: hidden;
+  .comming_soon{
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    position: relative;
+  }
   .patch_img{
     position: absolute;
     right: 0;
     bottom: 0;
     img{
       @media only screen and (max-width: 1199px) {
-        width: 600px;
+        width: 800px;
       }
       @media only screen and (max-width: 767px) {
         width: 400px;
